force-app/main/default/objects/Credentials__c/fields/Consumer_Secret_Auto__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret_Auto__c</fullName>
    <label>Consumer Secret(Auto)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>