force-app/main/default/objects/Credentials__c/fields/ConsumerKey__c.field-meta.xml
<CustomField>
    <fullName>ConsumerKey__c</fullName>
    <label>Consumer Key(Manual)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>