force-app/main/default/objects/Credentials__c/fields/ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>ConsumerSecret__c</fullName>
    <label>Consumer Secret(Manual)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>