force-app/main/default/objects/Credentials__c/fields/Redirect_URL_Auto__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL_Auto__c</fullName>
    <label>Redirect URL(Auto)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>